# deep-unpack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
unpack/: Cargo.toml
unpack/examples/: README.md  extract-level.rs  extract-template.rs  jar.rs  zip.rs
unpack/src/: data.rs  lib.rs  no_walk.yaml  unpack.rs  walk.rs
unpack/src/formats/: kinds.rs  mod.rs  zip.rs
unpack/src/snapshots/: deep_unpack__unpack__test_formats_kinds__can_split_file_by_name.snap  deep_unpack__walk__test_formats_kinds__can_split_file_by_name.snap
unpack/tests/: extract_test.rs
unpack/tests/snapshots/: can_extract_format@[zip]-[archive.zip].snap  can_extract_to_folder@[level]-[1]-2.snap  can_extract_to_folder@[level]-[1].snap  can_extract_to_folder@[level]-[2]-2.snap  can_extract_to_folder@[level]-[2].snap  can_extract_to_folder@[level]-[3]-2.snap  can_extract_to_folder@[level]-[3].snap  can_extract_with_unpack_level@[level]-[1]-2.snap  can_extract_with_unpack_level@[level]-[1].snap  can_extract_with_unpack_level@[level]-[2]-2.snap  can_extract_with_unpack_level@[level]-[2].snap  can_extract_with_unpack_level@[level]-[3]-2.snap  can_extract_with_unpack_level@[level]-[3].snap  extract_test__can_extract_to_folder_with_custom_ignore-2.snap  extract_test__can_extract_to_folder_with_custom_ignore.snap  extract_test__can_extract_with_ignores-2.snap  extract_test__can_extract_with_ignores.snap  extract_test__can_extract_with_template-2.snap  extract_test__can_extract_with_template.snap  text_can_extract_format@[jar]-[archive.jar]-2.snap  text_can_extract_format@[zip]-[archive.zip]-2.snap
(+6 files in other folders)
